# zephyr

./: CMakeLists.txt  Kconfig.zephyr  Kconfig_sysbuild  Kconfig_sysbuild.zephyr  __NOTES  __SMP_CMDS  board_split.php  lol  split.php  version.h.in  west.yml
.github/workflows/: bsim-tests.yaml  clang.yaml  twister.yaml
arch/arc/core/: CMakeLists.txt
arch/arm64/core/: CMakeLists.txt
arch/common/: CMakeLists.txt
arch/mips/core/: CMakeLists.txt
arch/nios2/core/: CMakeLists.txt
arch/posix/core/: CMakeLists.txt
arch/riscv/core/: CMakeLists.txt
arch/sparc/core/: CMakeLists.txt
arch/x86/core/: CMakeLists.txt
arch/xtensa/core/: CMakeLists.txt
boards/: Kconfig.v2
boards/arc/em_starterkit/: Kconfig.em_starterkit  Kconfig.em_starterkit_em11d  Kconfig.em_starterkit_em7d  Kconfig.em_starterkit_em7d_v22  Kconfig.em_starterkit_r22  Kconfig.em_starterkit_r23  em_starterkit_defconfig  em_starterkit_em11d_defconfig  em_starterkit_em11d_soc  em_starterkit_em7d_defconfig  em_starterkit_em7d_v22_defconfig  em_starterkit_em7d_v22_soc  em_starterkit_soc
boards/arc/emsdp/: Kconfig.board  Kconfig.emsdp  Kconfig.emsdp_em4  Kconfig.emsdp_em5d  Kconfig.emsdp_em6  Kconfig.emsdp_em7d  Kconfig.emsdp_em7d_esp  emsdp_defconfig  emsdp_em4_soc  emsdp_em5d_soc  emsdp_em6_soc  emsdp_em7d_esp_defconfig  emsdp_em7d_esp_soc  emsdp_em7d_soc  emsdp_em9d_soc  emsdp_soc
boards/arc/hsdk/: Kconfig.board  Kconfig.hsdk  Kconfig.hsdk_2cores  hsdk_2cores_defconfig  hsdk_2cores_soc  hsdk_defconfig
boards/arc/iotdk/: Kconfig.board  Kconfig.iotdk  iotdk_defconfig  iotdk_soc
boards/arc/nsim/: Kconfig.nsim_em  Kconfig.nsim_em7d_v22  Kconfig.nsim_hs  Kconfig.nsim_hs5x  Kconfig.nsim_hs5x_smp  Kconfig.nsim_hs6x  Kconfig.nsim_hs6x_smp  Kconfig.nsim_hs_mpuv6  Kconfig.nsim_hs_smp  Kconfig.nsim_sem  Kconfig.nsim_sem_mpu_stack_guard  nsim_em7d_v22_defconfig  nsim_em7d_v22_soc  nsim_em_soc  nsim_hs5x_defconfig  nsim_hs5x_smp_soc  nsim_hs5x_soc  nsim_hs6x_soc  (+11 more)
cmake/: mcuboot.cmake  mcuboot_keys.cmake
cmake/modules/: FindTargetTools.cmake  boards.cmake  configuration_files.cmake  dts.cmake  extensions.cmake  kconfig.cmake  kconfig_sysbuild.cmake  kernel.cmake  shields.cmake  snippets.cmake  soc.cmake  soc_v2.cmake  version.cmake  zephyr_module.cmake
doc/develop/: beyond-GSG.rst  modules.rst
doc/releases/: release-notes-3.3.rst  release-notes-3.5.rst  release-notes-3.7.rst  release-notes-4.0.rst
drivers/adc/: CMakeLists.txt
drivers/audio/: CMakeLists.txt
drivers/bbram/: CMakeLists.txt
drivers/bluetooth/: CMakeLists.txt
drivers/cache/: CMakeLists.txt
drivers/can/: CMakeLists.txt
drivers/clock_control/: CMakeLists.txt
drivers/console/: CMakeLists.txt
drivers/coredump/: CMakeLists.txt
drivers/counter/: CMakeLists.txt
drivers/crypto/: CMakeLists.txt
drivers/dac/: CMakeLists.txt
drivers/disk/: CMakeLists.txt
drivers/display/: CMakeLists.txt
drivers/dma/: CMakeLists.txt
drivers/ec_host_cmd_periph/: CMakeLists.txt
drivers/edac/: CMakeLists.txt
drivers/eeprom/: CMakeLists.txt
drivers/entropy/: CMakeLists.txt
drivers/espi/: CMakeLists.txt
drivers/ethernet/: CMakeLists.txt
drivers/flash/: CMakeLists.txt  Kconfig.nordic_qspi_nor  flash_shell.c  nrf_qspi_nor.c
drivers/fpga/: CMakeLists.txt
drivers/gpio/: CMakeLists.txt
drivers/hwinfo/: CMakeLists.txt  Kconfig
drivers/i2c/: CMakeLists.txt
drivers/i2s/: CMakeLists.txt
drivers/ieee802154/: CMakeLists.txt
drivers/interrupt_controller/: CMakeLists.txt
drivers/ipm/: CMakeLists.txt
drivers/kscan/: CMakeLists.txt
drivers/led/: CMakeLists.txt
drivers/led_strip/: CMakeLists.txt
drivers/mbox/: CMakeLists.txt
drivers/mdio/: CMakeLists.txt
drivers/memc/: CMakeLists.txt
drivers/mm/: CMakeLists.txt
drivers/modem/: CMakeLists.txt
drivers/net/: CMakeLists.txt
drivers/neural_net/: CMakeLists.txt
drivers/peci/: CMakeLists.txt
drivers/pinctrl/: CMakeLists.txt
drivers/pm_cpu_ops/: CMakeLists.txt
drivers/power_domain/: CMakeLists.txt
drivers/ps2/: CMakeLists.txt
drivers/ptp_clock/: CMakeLists.txt
drivers/pwm/: CMakeLists.txt
drivers/regulator/: CMakeLists.txt
drivers/reset/: CMakeLists.txt
drivers/sdhc/: CMakeLists.txt
drivers/sensor/: CMakeLists.txt
drivers/serial/: CMakeLists.txt  uart_nrfx_uarte.c
drivers/spi/: CMakeLists.txt
drivers/syscon/: CMakeLists.txt
drivers/timer/: CMakeLists.txt
drivers/video/: CMakeLists.txt
drivers/virtualization/: CMakeLists.txt
drivers/w1/: CMakeLists.txt
drivers/watchdog/: CMakeLists.txt
drivers/wifi/: CMakeLists.txt
include/drivers/: uart.h
lib/posix/: CMakeLists.txt
lib/smf/: CMakeLists.txt
modules/trusted-firmware-m/: CMakeLists.txt
samples/hello_world/: sysbuild.cmake
scripts/: list_boards.py  snippets.py  zephyr_module.py
scripts/ci/: check_compliance.py
scripts/kconfig/: kconfigfunctions.py
scripts/schemas/: board-schema.yml  soc-schema.yml
scripts/west_commands/: boards.py  build.py  run_common.py
share/sysbuild/: CMakeLists.txt  Kconfig  image_config.cmake  testcase.yaml
share/sysbuild/bootloader/: CMakeLists.txt
share/sysbuild/cmake/: domains.cmake
share/sysbuild/cmake/modules/: sysbuild_extensions.cmake  sysbuild_kconfig.cmake
share/sysbuild/image_configurations/: BOOTLOADER_image_default.cmake  MAIN_image_default.cmake
share/sysbuild/images/bootloader/: CMakeLists.txt
soc/: Kconfig_other
soc/common/: CMakeLists.txt  Kconfig
soc/espressif/: soc.yml
soc/nordic/: soc.yml
soc/nordic_nrf/: Kconfig  Kconfig.defconfig
subsys/emul/: CMakeLists.txt
subsys/fs/: CMakeLists.txt  shell.c
subsys/jwt/: CMakeLists.txt
subsys/logging/: log_backend_uart.c
subsys/modbus/: CMakeLists.txt
subsys/net/: CMakeLists.txt
subsys/net/l2/virtual/: CMakeLists.txt
subsys/net/l2/virtual/ipip/: CMakeLists.txt
subsys/random/: CMakeLists.txt
subsys/retention/: CMakeLists.txt  Kconfig  Kconfig.blinfo  blinfo_mcuboot.c  bootloader_mcuboot.c
subsys/rtio/: CMakeLists.txt
subsys/sd/: CMakeLists.txt
subsys/shell/: shell_fprintf.c
subsys/timing/: CMakeLists.txt
tests/bsim/: generate_coverage_report.sh
(+1923 files in other folders)
